--- a/index.html
+++ b/index.html
@@ -7,19 +7,53 @@
     <meta name="Nicolás Figueroa" content="Desafío SuperHero">
     <title>SuperHero</title>
 
-<!--Boostrap 5.0-->
-
-<!--style.css-->
-
+    <!--Boostrap 5.0-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!--style.css-->
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <!--Navbar-->
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand px-2" href="#"><img src="./assets/img/sh2.jpg" alt="iconoSuper" width="40" height="36"> SuperHero</a>
+        </div>
+    </nav>
+
+    <!--Header-->
+    <header>
+        <div class="container-fluid w-50 my-3 mx-auto">
+            <img src="./assets/img/sh1.jpg" alt="header">
+        </div>
+    </header>
+
+    <!--Sección Encuentra tu SuperHero-->
+    <section class="container-fluid">
+        <form action="">
+            <div class="w-50 m-auto">
+                <h1 class="mb-4">Encuentra tu SuperHero</h1>
+                <div class="col-12 my-2">
+                    <label for="">Ingrese el número del SuperHero a buscar</label>
+                </div>
+                <div class="col-12">
+                    <input class="form-control" id="superInput">
+                </div>
+                <button class="btn btn-primary my-3">Buscar</button> 
+            </div>
+                     
+        </form>
+    </section>
+
+    <!--Sección Mostrar tu SuperHero-->
+
 
     <!--Canvas JS-->
-
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <!--Script Boostrap 5.0-->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <!--CDN JQuery 3.6.0-->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!--main.js-->
-
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
